--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="icon" type="image/png" href="/images/Flash_Logo.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="/images/profile_pic.png" sizes="32x32" />
     <title>{% if page.title %}{{ page.title }} – {% endif %}{{ site.name }} – {{ site.description }}</title>
 
     {% include meta.html %}
@@ -25,10 +25,9 @@
 
           <div class="site-info">
             <center><h3 class="site-name"><a href="{{ site.baseurl }}/"><b>{{ site.name }}</b></a></h3></center>
-            <center><h4 class="site-description">{{ site.description }} @ Twitter</h4></center>
-            <center><a href="https://twitter.com/rishabh_misra_?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-size="large" data-show-screen-name="false" data-show-count="true">Follow @rishabh_misra_</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script></center>
+            <center><h4 class="site-description">{{ site.description }} @ Royal Cybers</h4></center>
+            <center><a href="https://www.linkedin.com/in/aiwithqasim/" class="twitter-follow-button" data-size="large" data-show-screen-name="false" data-show-count="true">Follow @aiwithqasim</a><script async src="https://platform.linkedin.com/in.js" charset="utf-8"></script></center>
           </div>
-          
 
           <nav>
             <a href="{{ site.baseurl }}/blog"><b>Blog</b></a>
