--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,7 @@
           <div class="site-info">
             <center><h3 class="site-name"><a href="{{ site.baseurl }}/"><b>{{ site.name }}</b></a></h3></center>
             <center><h4 class="site-description">{{ site.description }} @ RC</h4></center>
-            <center><a href="https://www.linkedin.com/in/aiwithqasim/" class="twitter-follow-button" data-size="large" data-show-screen-name="false" data-show-count="true">Follow @aiwithqasim</a><script src="https://platform.linkedin.com/in.js" type="text/javascript"> lang: en_US</script><script type="IN/FollowCompany" data-id="0000" data-counter="bottom"></script></center>
+            <center><script src="https://platform.linkedin.com/in.js" type="text/javascript"> lang: en_US</script><script type="IN/" data-id="aiwithqasim" data-counter="right"></script></center>
           </div>
 
           <nav>
