--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,8 +25,8 @@
 
           <div class="site-info">
             <center><h3 class="site-name"><a href="{{ site.baseurl }}/"><b>{{ site.name }}</b></a></h3></center>
-            <center><h4 class="site-description">{{ site.description }} @ Royal Cybers</h4></center>
-            <center><a href="https://www.linkedin.com/in/aiwithqasim/" class="twitter-follow-button" data-size="large" data-show-screen-name="false" data-show-count="true">Follow @aiwithqasim</a><script src="https://platform.linkedin.com/in.js" type="text/javascript"> lang: en_US</script></center>
+            <center><h4 class="site-description">{{ site.description }} @ RC</h4></center>
+            <center><a href="https://twitter.com/qasimhassan1020" class="twitter-follow-button" data-size="large" data-show-screen-name="false" data-show-count="true">Follow @qasimhassan1020</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script></center>
           </div>
           
 
