--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,8 +26,9 @@
           <div class="site-info">
             <center><h3 class="site-name"><a href="{{ site.baseurl }}/"><b>{{ site.name }}</b></a></h3></center>
             <center><h4 class="site-description">{{ site.description }} @ RC</h4></center>
-            <center><a href="https://twitter.com/qasimhassan1020" class="twitter-follow-button" data-size="large" data-show-screen-name="false" data-show-count="true">Follow @qasimhassan1020</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script></center>
+            <center><a href="https://www.linkedin.com/in/aiwithqasim/"><img src="https://www.learninglight.com/wp-content/uploads/2017/06/connect-on-LinkedIn-button.png" alt="connect-on-LinkedIn-button"></a></center>
           </div>
+          
           
 
           <nav>
