--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,7 @@
           <div class="site-info">
             <center><h3 class="site-name"><a href="{{ site.baseurl }}/"><b>{{ site.name }}</b></a></h3></center>
             <center><h4 class="site-description">{{ site.description }} @ RC</h4></center>
-            <center><a href="https://www.linkedin.com/in/aiwithqasim/"><img src="https://www.learninglight.com/wp-content/uploads/2017/06/connect-on-LinkedIn-button.png" alt="connect-on-LinkedIn-button"></a></center>
+            <center><a href="https://www.linkedin.com/in/aiwithqasim/"><img src="https://www.learninglight.com/wp-content/uploads/2017/06/connect-on-LinkedIn-button.png" alt="connect-on-LinkedIn-button" width="12px" height="6px"></a></center>
           </div>
           
           
