--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,9 @@
           <div class="site-info">
             <center><h3 class="site-name"><a href="{{ site.baseurl }}/"><b>{{ site.name }}</b></a></h3></center>
             <center><h4 class="site-description">{{ site.description }} @ RC</h4></center>
-            <center><a href="https://www.linkedin.com/in/aiwithqasim/"><img src="https://img.icons8.com/color/48/000000/linkedin.png"/></a></center>
+            <center><a href="https://www.linkedin.com/in/aiwithqasim/" target="_blank" ><img src="/images/linkedin.png"/></a> 
+                    <a href="https://github.com/aiwithqasim" target="_blank" ><img src="/images/github.png"/></a>
+            </center>
           </div>
           
           
