--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,6 +28,7 @@
             <center><h4 class="site-description">{{ site.description }} @ RC</h4></center>
             <center><a href="https://www.linkedin.com/in/aiwithqasim/" target="_blank" ><img src="/images/linkedin.png"/></a> 
                     <a href="https://github.com/aiwithqasim" target="_blank" ><img src="/images/github.png"/></a>
+                    <a href="https://aiwithqasim.medium.com/" target="_blank" ><img src="/images/medium.png"/></a>
             </center>
           </div>
           
