--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,18 +26,18 @@
           <div class="site-info">
             <center><h3 class="site-name"><a href="{{ site.baseurl }}/"><b>{{ site.name }}</b></a></h3></center>
             <center><h4 class="site-description">{{ site.description }} @ RC</h4></center>
-            <center><a href="https://www.linkedin.com/in/aiwithqasim/" target="_blank" ><img src="/images/linkedin.png"/></a> 
-                    <a href="https://github.com/aiwithqasim" target="_blank" ><img src="/images/github.png"/></a>
-                    <a href="https://www.kaggle.com/qasimhassan" target="_blank" ><img src="/images/kaggle.png"/></a>
+            <center><a href="https://www.linkedin.com/in/aiwithqasim/" target="_blank" ><img src="/images/social_logo/linkedin.png"/></a> 
+                    <a href="https://github.com/aiwithqasim" target="_blank" ><img src="/images/social_logo/github.png"/></a>
+                    <a href="https://www.kaggle.com/qasimhassan" target="_blank" ><img src="/images/social_logo/kaggle.png"/></a>
             </center>
           </div>
           
           
 
           <nav>
-            <a href="{{ site.baseurl }}/blog"><b>Blog</b></a>
+            <a href="{{ site.baseurl }}/blog"><b>Blogs</b></a>
             <a href="{{ site.baseurl }}/experience"><b>Experience</b></a>            
-            <a href="{{ site.baseurl }}/publications"><b>Research & Services</b></a>
+<!--         <a href="{{ site.baseurl }}/publications"><b>Research & Services</b></a>> -->   
             <a href="{{ site.baseurl }}/projects"><b>Projects</b></a>
 <!--             <a href="{{ site.baseurl }}/Rishabh_Misra_Resume_latest.pdf" target="_blank"><b>Resume</b></a> -->
             <a href="{{ site.baseurl }}/aboutme"><b>About Me</b></a>
